[package]
name = "cleanup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwalk = "0.8"
clap = { version = "4.4", features = ["derive"] }
print_bytes = "1.2"
ignore = "0.4"
anyhow = "1.0"
chrono = "0.4"