[package]
name = "cleanup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
ignore = "0.4"
itertools = "0.12"
print_bytes = "1.2"
serde = "1.0"
serde_json = "1.0"
sled = { version = "0.34", features = ["compression"] }
